--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
        <h1>Próximos Eventos</h1>
        <div class="event-list">
            <div class="event-container">
-                <a href="menu-evento.html" class="event-banner">
+                <a href="meu-evento-agd.html" class="event-banner">
                     <img src="img/BBC.jpg" alt="Banner do BBC Open de Jiu-Jitsu">
                 </a>
                 <div class="event-info">
                     <h2>BBC Open de Jiu-Jitsu</h2>
-                    <p>Clique para se inscrever!</p>
+                    <p>Inscrições 06 de Out!</p>
                 </div>
             </div>
              <div class="event-container">
