--- a/eventos/bbc/menu-evento.html
+++ b/eventos/bbc/menu-evento.html
@@ -186,7 +186,7 @@
 <body>
 
     <header>
-        <img src="../../img/arena2.png" alt="Arena Competidor Logo">
+        <img src="img/arena2.png" alt="Arena Competidor Logo">
     </header>
 
     <div class="main-content">
@@ -199,10 +199,10 @@
             <div class="menu-opcoes">
                 <a href="inscricao.html" class="btn-menu destaque">Inscrição</a>
                 <a href="../../alterar-inscricao.html" class="btn-menu vermelho">Alterar Inscrição</a>
+                 <a href="../../confirmar pagamento.html" class="btn-menu vermelho">Pagar Inscrição</a>
                 <a href="checagem.html" class="btn-menu">Checagem</a>
-               <a href="https://drive.google.com/file/d/1qmaP9z5S4RN2iwfG81tVtG1_5BxSMuot/view?usp=sharing" class="btn-menu" target="_blank">Edital</a>
+                <a href="https://drive.google.com/file/d/1qmaP9z5S4RN2iwfG81tVtG1_5BxSMuot/view?usp=sharing" class="btn-menu" target="_blank">Edital</a>
                 <a href="chaves.html" class="btn-menu">Chaves</a>
-                <a href="aovivo.html" class="btn-menu">Transmissão ao vivo</a>
             </div>
         </div>
 
