--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -723,7 +723,7 @@
                     const categoriaIdade = categoriaSelect.value;
                     const totalPagarValor = totalPagar.innerText.replace('R$ ', '').replace(',', '.'); 
 
-                    const urlPagamento = `../../pagamentos.html?atleta=${encodeURIComponent(nomeAtleta)}&categoria=${encodeURIComponent(categoriaIdade)}&valor=${totalPagarValor}`;
+                    const urlPagamento = `pagamentos.html?atleta=${encodeURIComponent(nomeAtleta)}&categoria=${encodeURIComponent(categoriaIdade)}&valor=${totalPagarValor}`;
 
                     window.location.href = urlPagamento; 
                     
