--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -445,24 +445,24 @@
                 feminino: ["Galo/Rooster até 32,2kg", "Pluma/Light-Feather até 36,2kg", "Pena/Feather até 40,3kg", "Leve/Light até 44,3kg", "Médio/Middle até 48,3kg", "Meio-Pesado/Medium-Heavy até 52,5kg", "Pesado/Heavy até 56,5kg", "Super-Pesado/Super-Heavy até 60,5kg", "Pesadíssimo/Ultra-Heavy acima de 60,5kg"]
             },
             "Infantil 3": {
-                masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
-                feminino: ["Galo/Rooster até 48,5kg", "Pluma/Light-Feather até 53,5kg", "Pena/Feather até 58,5kg", "Leve/Light até 64kg", "Médio/Middle até 69kg", "Meio-Pesado/Medium-Heavy até 74kg", "Pesado/Heavy até 79,3kg", "Super-Pesado/Super-Heavy até 84,3kg", "Pesadíssimo/Ultra-Heavy acima de 84,3kg"]
+                masculino: ["Galo/Rooster até 36,2kg", "Pluma/Light-Feather até 40,3kg", "Pena/Feather até 44,3kg", "Leve/Light até 48,3kg", "Médio/Middle até 52,5kg", "Meio-Pesado/Medium-Heavy até 56,5kg", "Pesado/Heavy até 60,5kg", "Super-Pesado/Super-Heavy até 65kg", "Pesadíssimo/Ultra-Heavy acima de 65kg"],
+                feminino: ["Galo/Rooster até 36,2kg", "Pluma/Light-Feather até 40,3kg", "Pena/Feather até 44,3kg", "Leve/Light até 48,3kg", "Médio/Middle até 52,5kg", "Meio-Pesado/Medium-Heavy até 56,5kg", "Pesado/Heavy até 60,5kg", "Super-Pesado/Super-Heavy até 65kg", "Pesadíssimo/Ultra-Heavy acima de 65kg"]
             },
             "Infanto-Juvenil 1": {
-                masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
-                feminino: ["Galo/Rooster até 48,5kg", "Pluma/Light-Feather até 53,5kg", "Pena/Feather até 58,5kg", "Leve/Light até 64kg", "Médio/Middle até 69kg", "Meio-Pesado/Medium-Heavy até 74kg", "Pesado/Heavy até 79,3kg", "Super-Pesado/Super-Heavy até 84,3kg", "Pesadíssimo/Ultra-Heavy acima de 84,3kg"]
+                masculino: ["Galo/Rooster até 36,2kg", "Pluma/Light-Feather até 40,3kg", "Pena/Feather até 44,3kg", "Leve/Light até 48,3kg", "Médio/Middle até 52,5kg", "Meio-Pesado/Medium-Heavy até 56,5kg", "Pesado/Heavy até 60,5kg", "Super-Pesado/Super-Heavy até 65kg", "Pesadíssimo/Ultra-Heavy acima de 65kg"],
+                feminino: ["Galo/Rooster até 36,2kg", "Pluma/Light-Feather até 40,3kg", "Pena/Feather até 44,3kg", "Leve/Light até 48,3kg", "Médio/Middle até 52,5kg", "Meio-Pesado/Medium-Heavy até 56,5kg", "Pesado/Heavy até 60,5kg", "Super-Pesado/Super-Heavy até 65kg", "Pesadíssimo/Ultra-Heavy acima de 65kg"]
             },
             "Infanto-Juvenil 2": {
-                masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
-                feminino: ["Galo/Rooster até 48,5kg", "Pluma/Light-Feather até 53,5kg", "Pena/Feather até 58,5kg", "Leve/Light até 64kg", "Médio/Middle até 69kg", "Meio-Pesado/Medium-Heavy até 74kg", "Pesado/Heavy até 79,3kg", "Super-Pesado/Super-Heavy até 84,3kg", "Pesadíssimo/Ultra-Heavy acima de 84,3kg"]
+                masculino: ["Galo/Rooster até 44,3kg", "Pluma/Light-Feather até 48,3kg", "Pena/Feather até 52,5kg", "Leve/Light até 56,5kg", "Médio/Middle até 60,5kg", "Meio-Pesado/Medium-Heavy até 65kg", "Pesado/Heavy até 69kg", "Super-Pesado/Super-Heavy até 73kg", "Pesadíssimo/Ultra-Heavy acima de 73kg"],
+                feminino: ["Galo/Rooster até 40,3kg", "Pluma/Light-Feather até 44,3kg", "Pena/Feather até 48,3kg", "Leve/Light até 52,5kg", "Médio/Middle até 56,5kg", "Meio-Pesado/Medium-Heavy até 60,5kg", "Pesado/Heavy até 65kg", "Super-Pesado/Super-Heavy até 69kg", "Pesadíssimo/Ultra-Heavy acima de 69kg"]
             },
             "Infanto-Juvenil 3": {
-                masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
-                feminino: ["Galo/Rooster até 48,5kg", "Pluma/Light-Feather até 53,5kg", "Pena/Feather até 58,5kg", "Leve/Light até 64kg", "Médio/Middle até 69kg", "Meio-Pesado/Medium-Heavy até 74kg", "Pesado/Heavy até 79,3kg", "Super-Pesado/Super-Heavy até 84,3kg", "Pesadíssimo/Ultra-Heavy acima de 84,3kg"]
+                 masculino: ["Galo/Rooster até 44,3kg", "Pluma/Light-Feather até 48,3kg", "Pena/Feather até 52,5kg", "Leve/Light até 56,5kg", "Médio/Middle até 60,5kg", "Meio-Pesado/Medium-Heavy até 65kg", "Pesado/Heavy até 69kg", "Super-Pesado/Super-Heavy até 73kg", "Pesadíssimo/Ultra-Heavy acima de 73kg"],
+                feminino: ["Galo/Rooster até 40,3kg", "Pluma/Light-Feather até 44,3kg", "Pena/Feather até 48,3kg", "Leve/Light até 52,5kg", "Médio/Middle até 56,5kg", "Meio-Pesado/Medium-Heavy até 60,5kg", "Pesado/Heavy até 65kg", "Super-Pesado/Super-Heavy até 69kg", "Pesadíssimo/Ultra-Heavy acima de 69kg"]
             },
             "Juvenil": {
-                masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
-                feminino: ["Galo/Rooster até 48,5kg", "Pluma/Light-Feather até 53,5kg", "Pena/Feather até 58,5kg", "Leve/Light até 64kg", "Médio/Middle até 69kg", "Meio-Pesado/Medium-Heavy até 74kg", "Pesado/Heavy até 79,3kg", "Super-Pesado/Super-Heavy até 84,3kg", "Pesadíssimo/Ultra-Heavy acima de 84,3kg"]
+                masculino: ["Galo/Rooster até 53,5kg", "Pluma/Light-Feather até 58,5kg", "Pena/Feather até 64kg", "Leve/Light até 69kg", "Médio/Middle até 74kg", "Meio-Pesado/Medium-Heavy até 79,3kg", "Pesado/Heavy até 84,3kg", "Super-Pesado/Super-Heavy até 89,3kg", "Pesadíssimo/Ultra-Heavy acima de 89,3kg"],
+                feminino: ["Galo/Rooster até 44,3kg", "Pluma/Light-Feather até 48,3kg", "Pena/Feather até 52,5kg", "Leve/Light até 56,5kg", "Médio/Middle até 60,5kg", "Meio-Pesado/Medium-Heavy até 65kg", "Pesado/Heavy até 69kg", "Super-Pesado/Super-Heavy até 73kg", "Pesadíssimo/Ultra-Heavy acima de 73kg"]
             },
             "Adulto": {
                 masculino: ["Galo/Rooster até 57,5kg", "Pluma/Light-Feather até 64kg", "Pena/Feather até 70kg", "Leve/Light até 76kg", "Médio/Middle até 82,3kg", "Meio-Pesado/Medium-Heavy até 88,3kg", "Pesado/Heavy até 94,3kg", "Super-Pesado/Super-Heavy até 100,5kg", "Pesadíssimo/Ultra-Heavy acima de 100,5kg"],
@@ -723,7 +723,7 @@
                     const categoriaIdade = categoriaSelect.value;
                     const totalPagarValor = totalPagar.innerText.replace('R$ ', '').replace(',', '.'); 
 
-                    const urlPagamento = `pagamentos.html?atleta=${encodeURIComponent(nomeAtleta)}&categoria=${encodeURIComponent(categoriaIdade)}&valor=${totalPagarValor}`;
+                    const urlPagamento = `../../pagamentos.html?atleta=${encodeURIComponent(nomeAtleta)}&categoria=${encodeURIComponent(categoriaIdade)}&valor=${totalPagarValor}`;
 
                     window.location.href = urlPagamento; 
                     
