--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -515,14 +515,14 @@
             "Infanto-Juvenil 2": ["Branca", "Cinza", "Amarela", "Laranja", "Verde"],
             "Infanto-Juvenil 3": ["Branca", "Cinza", "Amarela", "Laranja", "Verde"],
             "Juvenil": ["Branca", "Azul"],
-            "Adulto": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 1": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 2": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 3": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 4": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 5": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 6": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
-            "Master 7": ["Branca", "Azul", "Roxa", "Marrom", "Preta"],
+            "Adulto": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 1": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 2": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 3": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 4": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 5": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 6": ["Branca", "Azul", "Roxa", "Marrom"],
+            "Master 7": ["Branca", "Azul", "Roxa", "Marrom"],
         };
 
         // ==========================================================
