--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
        <h1>Próximos Eventos</h1>
        <div class="event-list">
            <div class="event-container">
-                <a href="meu-evento-agd.html" class="event-banner">
+                <a href="eventos/bbc/menu-evento.html" class="event-banner">
                     <img src="img/BBC.jpg" alt="Banner do BBC Open de Jiu-Jitsu">
                 </a>
                 <div class="event-info">
