--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </a>
                 <div class="event-info">
                     <h2>BBC Open de Jiu-Jitsu</h2>
-                    <p>Inscrições em breve!</p>
+                    <p>Inscrições Abertas!</p>
                 </div>
             </div>
              <div class="event-container">
