--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
              <div class="event-container">
                 <a href="meu-evento-agd.html" class="event-banner">
-                    <img src="img/senogicaico.JPG" alt="Banner do Senogi Caicó">
+                    <img src="img/SENOGICAICOAC.jpeg" alt="Banner do Senogi Caicó">
                 </a>
                 <div class="event-info">
                     <h2>SENOGI - Etapa Caicó/RN</h2>
@@ -156,7 +156,7 @@
             </div>
             <div class="event-container">
                 <a href="meu-evento-agd.html" class="event-banner">
-                    <img src="img/senogipatos.jpeg" alt="Banner do Senogi Patos">
+                    <img src="img/SENOGIPATOSAC.jpeg" alt="Banner do Senogi Patos">
                 </a>
                 <div class="event-info">
                     <h2>SENOGI - Etapa Patos/PB</h2>
@@ -165,7 +165,7 @@
             </div>
             <div class="event-container">
                 <a href="meu-evento-agd.html" class="event-banner">
-                    <img src="img/senogicurrais.jpeg" alt="Banner do Senogi currais">
+                    <img src="img/SENOGICURRAISNOVOSAC.jpeg" alt="Banner do Senogi currais">
                 </a>
                 <div class="event-info">
                     <h2>SENOGI - Currais Novos/RN</h2>
