--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
        <div class="event-list">
            <div class="event-container">
                 <a href="eventos/bbc/menu-evento.html" class="event-banner">
-                    <img src="img/BBC.jpg" alt="Banner do BBC Open de Jiu-Jitsu">
+                    <img src="img/BBCOPENAC.jpeg" alt="Banner do BBC Open de Jiu-Jitsu">
                 </a>
                 <div class="event-info">
                     <h2>BBC Open de Jiu-Jitsu</h2>
