--- a/eventos/bbc/menu-evento.html
+++ b/eventos/bbc/menu-evento.html
@@ -194,7 +194,7 @@
         
         <div class="event-menu-container">
             <div class="event-banner-menu">
-                <img src="../../img/BBC.jpg" alt="Banner do BBC Open de Jiu-Jitsu">
+                <img src="../../img/BBCOPENAC.jpeg" alt="Banner do BBC Open de Jiu-Jitsu">
             </div>
             <div class="menu-opcoes">
                 <a href="inscricao.html" class="btn-menu destaque">Inscrição</a>
