--- a/eventos/senogicaico/alterar-inscricao.html
+++ b/eventos/senogicaico/alterar-inscricao.html
@@ -111,7 +111,7 @@
 <body>
 
     <header>
-        <img src="img/arena2.png" alt="Arena Competidor Logo">
+        <img src="../../img/arena2.png" alt="Arena Competidor Logo">
     </header>
 
     <div class="main-content">
@@ -119,7 +119,7 @@
         
         <div class="aviso-data">
             <h2>🔒 Alterações Temporariamente Fechadas</h2>
-            <p>As alterações nas inscrições serão liberadas a partir de <b>10 de Novembro</b>.</p>
+            <p>As alterações nas inscrições serão liberadas a partir de <b>01 de Novembro</b>.</p>
             <p>Por favor, retorne nesta data para acessar e editar seus dados.</p>
         </div>
         
