--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
              <div class="event-container">
-                <a href="eventos/senogicaico/menu-evento.html" class="event-banner">
+                <a href="meu-evento-agd.html" class="event-banner">
                     <img src="img/SENOGICAICOAC.jpeg" alt="Banner do Senogi Caicó">
                 </a>
                 <div class="event-info">
