--- a/eventos/bbc/checagem-absoluto.html
+++ b/eventos/bbc/checagem-absoluto.html
@@ -264,7 +264,7 @@
     <div class="main-content">
         <h1>Checagem de Absoluto</h1>
 
-        <div id="loading-message">Carregando dados da planilha...</div>
+        <div id="loading-message">Carregando dados...</div>
         <div id="listaInscritosAbsoluto">
             </div>
         
