--- a/eventos/bbc/checagem-categoria.html
+++ b/eventos/bbc/checagem-categoria.html
@@ -333,7 +333,7 @@
             </div>
         </div>
 
-        <div id="loading-message">Carregando dados da planilha...</div>
+        <div id="loading-message">Carregando dados...</div>
         <div id="listaInscritos">
             </div>
     </div>
