--- a/eventos/bbc/checagem-equipes.html
+++ b/eventos/bbc/checagem-equipes.html
@@ -282,7 +282,7 @@
     <div class="main-content">
         <h1>Checagem por Equipes</h1>
 
-        <div id="loading-message">Carregando dados da planilha...</div>
+        <div id="loading-message">Carregando dados...</div>
         <div id="listaEquipes">
             </div>
         
