--- a/eventos/bbc/checagem-categoria.html
+++ b/eventos/bbc/checagem-categoria.html
@@ -335,6 +335,7 @@
 
         <div id="loading-message">Carregando dados...</div>
         <div id="listaInscritos">
+            <a href="checagem.html" class="link-voltar">Voltar para Opções de Checagem</a>
             </div>
     </div>
 
