--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h1>Próximos Eventos</h1>
         <div class="event-list">
             <div class="event-container">
-                <a href="meu-evento-agd.html" class="event-banner">
+                <a href="eventos/senogicaico/senogi_caico.html" class="event-banner">
                     <img src="img/SENOGICAICOAC.jpeg" alt="Banner do Senogi Caicó">
                 </a>
                 <div class="event-info">
