--- a/eventos/senogicaico/senogi_caico.html
+++ b/eventos/senogicaico/senogi_caico.html
@@ -198,7 +198,7 @@
             </div>
             <div class="menu-opcoes">
                 <a href="inscricao.html" class="btn-menu destaque">Inscrição</a>
-                <a href="alterar-inscricao.html" class="btn-menu vermelho">Alterar Inscrição</a>
+                <a href="../../alterar-inscricao.html" class="btn-menu vermelho">Alterar Inscrição</a>
                  <a href="confirmar_pagamento.html" class="btn-menu vermelho">Pagar Inscrição</a>
                 <a href="checagem.html" class="btn-menu">Checagem</a>
                 <a href="https://drive.google.com/file/d/1PuQ3myk_Yd9hz96wZf_npQpiC6pN0dEL/view?usp=sharing" class="btn-menu" target="_blank">Edital</a>
