--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <span class="icon">📍</span> 
                         <span><b>Caicó/RN</b></span>
                     </div>
-                    <p>Inscrições em breve!</p>
+                    <p>INSCRIÇÕES ABERTAS!</p>
                 </div>
             </div>
             <div class="event-container">
@@ -182,7 +182,7 @@
                         <span class="icon">📍</span> 
                         <span><b>Belém do Brejo do Cruz/PB</b></span>
                     </div>
-                    <p>Inscrições Abertas!</p>
+                    <p>INSCRIÇÕES ABERTAS!</p>
                 </div>
             </div>
             
