--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -281,6 +281,7 @@
                     <option value="Checkmat">Checkmat</option>
                     <option value="Gadelha Team">Gadelha Team</option>
                     <option value="Infantaria BJJ">Infantaria BJJ</option>
+                    <option value="Kimura">Kimura</option>
                     <option value="SZT SN">SZT SN</option>
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
@@ -313,6 +314,7 @@
                     <option value="Lázaro Fernandes">Lázaro Fernandes</option>
                     <option value="Matheus Gadelha">Matheus Gadelha</option>
                     <option value="Pablo Forlan">Pablo Forlan</option>
+                    <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
                     <option value="Outro">Outro (Digitar abaixo)</option>
                 </select>
