--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -309,11 +309,14 @@
                     <option value="Felipe Bunes">Felipe Bunes</option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
+                    <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
+                    <option value="Junior Santos">Junior Santos</option>
                     <option value="Lázaro Fernandes">Lázaro Fernandes</option>
                     <option value="Matheus Gadelha">Matheus Gadelha</option>
                     <option value="Pablo Forlan">Pablo Forlan</option>
+                    <option value="Samara Saldanha">Samara Saldanha</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
                     <option value="Outro">Outro (Digitar abaixo)</option>
