--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -285,6 +285,7 @@
                     <option value="SZT SN">SZT SN</option>
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
+                    <option value="Projeto Social Guerreiros da Fé">Projeto Social Guerreiros da Fé</option>
                     <option value="ROX BJJ">ROX BJJ</option>
                     <option value="SZT">SZT</option>
                     <option value="Team Fernando Alves">Team Fernando Alves</option>
