--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -285,6 +285,7 @@
                     <option value="SZT SN">SZT SN</option>
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
+                    <option value="Projeto Social Guerreiros da Fé">Projeto Social Guerreiros da Fé</option>
                     <option value="ROX BJJ">ROX BJJ</option>
                     <option value="SZT">SZT</option>
                     <option value="Team Fernando Alves">Team Fernando Alves</option>
@@ -309,11 +310,14 @@
                     <option value="Felipe Bunes">Felipe Bunes</option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
+                    <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
+                    <option value="Junior Santos">Junior Santos</option>
                     <option value="Lázaro Fernandes">Lázaro Fernandes</option>
                     <option value="Matheus Gadelha">Matheus Gadelha</option>
                     <option value="Pablo Forlan">Pablo Forlan</option>
+                    <option value="Samara Saldanha">Samara Saldanha</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
                     <option value="Outro">Outro (Digitar abaixo)</option>
