--- a/eventos/bbc/menu-evento.html
+++ b/eventos/bbc/menu-evento.html
@@ -198,8 +198,9 @@
             </div>
             <div class="menu-opcoes">
                 <a href="inscricao.html" class="btn-menu destaque">Inscrição</a>
+                <a href="inscricao-projeto-social.html" class="btn-menu destaque">PROJETO SOCIAL</a>
                 <a href="../../alterar-inscricao.html" class="btn-menu vermelho">Alterar Inscrição</a>
-                 <a href="confirmar_pagamento.html" class="btn-menu vermelho">Pagar Inscrição</a>
+                <a href="confirmar_pagamento.html" class="btn-menu vermelho">Pagar Inscrição</a>
                 <a href="checagem.html" class="btn-menu">Checagem</a>
                 <a href="https://drive.google.com/file/d/1qmaP9z5S4RN2iwfG81tVtG1_5BxSMuot/view?usp=sharing" class="btn-menu" target="_blank">Edital</a>
                 <a href="chaves.html" class="btn-menu">Chaves</a>
