--- a/eventos/bbc/confirmar_pagamento_mpago.html
+++ b/eventos/bbc/confirmar_pagamento_mpago.html
@@ -92,8 +92,8 @@
            <div class="info-box">
                <h2>✅ Inscrição Realizada</h2>
                <p>Preencha seus dados abaixo para enviar a sinalização de pagamento à organização do evento via WhatsApp.</p>
-               <p style="font-weight: bold;">Este formulário é apenas para **CONFIRMAÇÃO**.</p>
-               <p style="font-weight: bold; color: #cc0000; margin-top: 15px;">**IMPORTANTE:** Se você ainda não efetuou o pagamento, sua inscrição não será validada.</p>
+               <p style="font-weight: bold;">Este formulário é apenas para <b>CONFIRMAÇÃO</b>.</p>
+               <p style="font-weight: bold; color: #cc0000; margin-top: 15px;"><b>IMPORTANTE:</b> Se você ainda não efetuou o pagamento, sua inscrição não será validada.</p>
            </div>
            
            <div class="input-fields">
