--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -281,6 +281,7 @@
                     <option value="Checkmat">Checkmat</option>
                     <option value="Gadelha Team">Gadelha Team</option>
                     <option value="Infantaria BJJ">Infantaria BJJ</option>
+                    <option value="Jonson Rodrigues">Jonson Rodrigues</option>
                     <option value="Kimura">Kimura</option>
                     <option value="SZT SN">SZT SN</option>
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
@@ -308,6 +309,7 @@
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
                     <option value="Felipe Bunes">Felipe Bunes</option>
+                    <option value="Francielly ">Francielly </option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
                     <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
