--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -312,6 +312,7 @@
                     <option value="Francielly ">Francielly </option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
+                    <option value="Heudes Silva">Heudes Silva</option>
                     <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
