--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -281,6 +281,7 @@
                     <option value="Checkmat">Checkmat</option>
                     <option value="Gadelha Team">Gadelha Team</option>
                     <option value="Infantaria BJJ">Infantaria BJJ</option>
+                    <option value="Jonson Rodrigues">Jonson Rodrigues</option>
                     <option value="Kimura">Kimura</option>
                     <option value="SZT SN">SZT SN</option>
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
