--- a/eventos/bbc/inscricao-projeto-social.html
+++ b/eventos/bbc/inscricao-projeto-social.html
@@ -309,8 +309,10 @@
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
                     <option value="Felipe Bunes">Felipe Bunes</option>
+                    <option value="Francielly ">Francielly </option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
+                    <option value="Heudes Silva">Heudes Silva</option>
                     <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
