--- a/meu-evento-agd.html
+++ b/meu-evento-agd.html
@@ -103,6 +103,7 @@
 <body>
 
     <header>
+        <a href="index.html">
         <img src="img/arena2.png" alt="Arena Competidor Logo">
     </header>
 
