--- a/eventos/senogicaico/chaves.html
+++ b/eventos/senogicaico/chaves.html
@@ -103,7 +103,9 @@
 <body>
 
     <header>
+        <a href="../../index.html">
         <img src="../../img/arena2.png" alt="Arena Competidor Logo">
+        </a>
     </header>
 
     <div class="main-content">
