--- a/eventos/senogicaico/alterar-inscricao.html
+++ b/eventos/senogicaico/alterar-inscricao.html
@@ -111,7 +111,9 @@
 <body>
 
     <header>
+        <a href="../../index.html">
         <img src="../../img/arena2.png" alt="Arena Competidor Logo">
+        </a>
     </header>
 
     <div class="main-content">
