--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -226,7 +226,9 @@
 
     <div class="container">
         <header>
+            <a href="../../index.html">
             <img src="../../img/arena2.png" alt="Arena Competidor Logo">
+            </a>
         </header>
 
         <h1>Inscrição BBC Open de Jiu-Jitsu</h1>
