--- a/eventos/bbc/checagem-absoluto.html
+++ b/eventos/bbc/checagem-absoluto.html
@@ -109,7 +109,7 @@
         }
 
         .accordion-content.open {
-            max-height: 500px; 
+            max-height: none; 
             padding: 20px;
         }
         
