--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -281,6 +281,7 @@
                     <option value="BTT">BTT</option>
                     <option value="Cascão Jiu Jitsu">Cascão Jiu Jitsu</option>
                     <option value="Checkmat">Checkmat</option>
+                    <option value="CT Igor Lima">CT Igor Lima</option>
                     <option value="Gadelha Team">Gadelha Team</option>
                     <option value="Infantaria BJJ">Infantaria BJJ</option>
                     <option value="Jonson Rodrigues">Jonson Rodrigues</option>
@@ -315,6 +316,7 @@
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
                     <option value="Heudes Silva">Heudes Silva</option>
+                    <option value="Igor Lima">Igor Lima</option>
                     <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
