--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -280,6 +280,7 @@
                     <option value="Avanti Jiu-jitsu">Avanti Jiu-jitsu</option>
                     <option value="BTT">BTT</option>
                     <option value="Cascão Jiu Jitsu">Cascão Jiu Jitsu</option>
+                    <option value="CERES">CERES</option>
                     <option value="Checkmat">Checkmat</option>
                     <option value="CT Igor Lima">CT Igor Lima</option>
                     <option value="Gadelha Team">Gadelha Team</option>
@@ -312,6 +313,7 @@
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
                     <option value="Felipe Bunes">Felipe Bunes</option>
+                    <option value="Fillipe Azevedo ">Fillipe Azevedo </option>
                     <option value="Francielly ">Francielly </option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
@@ -324,6 +326,7 @@
                     <option value="Lázaro Fernandes">Lázaro Fernandes</option>
                     <option value="Matheus Gadelha">Matheus Gadelha</option>
                     <option value="Pablo Forlan">Pablo Forlan</option>
+                    <option value="Rafael Batista  ">Rafael Batista  </option>
                     <option value="Samara Saldanha">Samara Saldanha</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
