--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -311,10 +311,12 @@
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
                     <option value="Felipe Bunes">Felipe Bunes</option>
+                    <option value="Fillipe Azevedo ">Fillipe Azevedo </option>
                     <option value="Francielly ">Francielly </option>
                     <option value="Gelson Teixeira">Gelson Teixeira</option>
                     <option value="George Costa">George Costa</option>
                     <option value="Heudes Silva">Heudes Silva</option>
+                    <option value="Igor Lima">Igor Lima</option>
                     <option value="Ivanaldo Ferreira">Ivanaldo Ferreira</option>
                     <option value="José Victor">José Victor</option>
                     <option value="Josenilson Albino">Josenilson Albino</option>
@@ -322,6 +324,7 @@
                     <option value="Lázaro Fernandes">Lázaro Fernandes</option>
                     <option value="Matheus Gadelha">Matheus Gadelha</option>
                     <option value="Pablo Forlan">Pablo Forlan</option>
+                    <option value="Rafael Batista  ">Rafael Batista  </option>
                     <option value="Samara Saldanha">Samara Saldanha</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
