--- a/eventos/bbc/inscricao-projeto-social.html
+++ b/eventos/bbc/inscricao-projeto-social.html
@@ -280,7 +280,9 @@
                     <option value="Avanti Jiu-jitsu">Avanti Jiu-jitsu</option>
                     <option value="BTT">BTT</option>
                     <option value="Cascão Jiu Jitsu">Cascão Jiu Jitsu</option>
+                    <option value="CERES">CERES</option>
                     <option value="Checkmat">Checkmat</option>
+                    <option value="CT Igor Lima">CT Igor Lima</option>
                     <option value="Gadelha Team">Gadelha Team</option>
                     <option value="Infantaria BJJ">Infantaria BJJ</option>
                     <option value="Jonson Rodrigues">Jonson Rodrigues</option>
