--- a/eventos/senogicaico/inscricao.html
+++ b/eventos/senogicaico/inscricao.html
@@ -291,9 +291,11 @@
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
                     <option value="Projeto Social Guerreiros da Fé">Projeto Social Guerreiros da Fé</option>
+                    <option value="Rhinos">Rhinos</option>
                     <option value="ROX BJJ">ROX BJJ</option>
-                    <option value="SZT">SZT</option>
+                    <option value="Valois Jardim Jiu Jitsu">Valois Jardim Jiu Jitsu</option>
                     <option value="Team Fernando Alves">Team Fernando Alves</option>
+                    
                     <option value="Outra">Outra (Digitar abaixo)</option>
                 </select>
             </div>
@@ -309,6 +311,7 @@
                     <option value="">Selecione o Professor...</option>
                     <option value="Baixinho">Baixinho</option>
                     <option value="Carly Fran">Carly Fran</option>
+                    <option value="Cleanto Pereira">Cleanto Pereira</option>    
                     <option value="Cleyton Moura">Cleyton Moura</option>
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
@@ -328,6 +331,7 @@
                     <option value="Pablo Forlan">Pablo Forlan</option>
                     <option value="Rafael Batista  ">Rafael Batista  </option>
                     <option value="Samara Saldanha">Samara Saldanha</option>
+                    <option value="Serginho">Serginho</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
                     <option value="Outro">Outro (Digitar abaixo)</option>
