--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -276,7 +276,7 @@
             <div class="form-group">
                 <label for="equipeSelect">Sua Equipe:</label>
                 <select id="equipeSelect" required>
-                    <option value="">Selecione a Equipe...</option>
+                  <option value="">Selecione a Equipe...</option>
                     <option value="Avanti Jiu-jitsu">Avanti Jiu-jitsu</option>
                     <option value="BTT">BTT</option>
                     <option value="Cascão Jiu Jitsu">Cascão Jiu Jitsu</option>
@@ -291,8 +291,9 @@
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
                     <option value="Projeto Social Guerreiros da Fé">Projeto Social Guerreiros da Fé</option>
+                    <option value="Rhinos">Rhinos</option>
                     <option value="ROX BJJ">ROX BJJ</option>
-                    <option value="SZT">SZT</option>
+                    <option value="Valois Jardim Jiu Jitsu">Valois Jardim Jiu Jitsu</option>
                     <option value="Team Fernando Alves">Team Fernando Alves</option>
                     <option value="Outra">Outra (Digitar abaixo)</option>
                 </select>
