--- a/eventos/bbc/inscricao-projeto-social.html
+++ b/eventos/bbc/inscricao-projeto-social.html
@@ -291,8 +291,9 @@
                     <option value="Nova Geração Nordeste">Nova Geração Nordeste</option>                  
                     <option value="Pitbull Brothers">Pitbull Brothers</option>
                     <option value="Projeto Social Guerreiros da Fé">Projeto Social Guerreiros da Fé</option>
+                    <option value="Rhinos">Rhinos</option>
                     <option value="ROX BJJ">ROX BJJ</option>
-                    <option value="SZT">SZT</option>
+                    <option value="Valois Jardim Jiu Jitsu">Valois Jardim Jiu Jitsu</option>
                     <option value="Team Fernando Alves">Team Fernando Alves</option>
                     <option value="Outra">Outra (Digitar abaixo)</option>
                 </select>
