--- a/eventos/bbc/inscricao.html
+++ b/eventos/bbc/inscricao.html
@@ -310,6 +310,7 @@
                     <option value="">Selecione o Professor...</option>
                     <option value="Baixinho">Baixinho</option>
                     <option value="Carly Fran">Carly Fran</option>
+                    <option value="Cleanto Pereira">Cleanto Pereira</option>    
                     <option value="Cleyton Moura">Cleyton Moura</option>
                     <option value="Danilo Marques">Danilo Marques</option>
                     <option value="Elenilson Peixotinho">Elenilson Peixotinho</option>
@@ -329,6 +330,7 @@
                     <option value="Pablo Forlan">Pablo Forlan</option>
                     <option value="Rafael Batista  ">Rafael Batista  </option>
                     <option value="Samara Saldanha">Samara Saldanha</option>
+                    <option value="Serginho">Serginho</option>
                     <option value="Watson">Watson</option>
                     <option value="Wellinson Medeiros">Wellinson Medeiros</option>
                     <option value="Outro">Outro (Digitar abaixo)</option>
