--- a/eventos/bbc/menu-evento.html
+++ b/eventos/bbc/menu-evento.html
@@ -299,6 +299,11 @@
     <div class="footer">
         &copy; 2025 Arena Competidor. Todos os direitos reservados.
     </div>
-
+<a href="https://wa.me/5584987513740?text=Ol%C3%A1!%20Vim%20pelo%20site%20e%20gostaria%20de%20falar%20com%20o%20suporte." class="whatsapp-fixed-text-button" target="_blank" rel="noopener noreferrer">
+    <svg class="whatsapp-icon-only" viewBox="0 0 16 16">
+        <path fill="currentColor" d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.601 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.535c0-3.626 2.951-6.574 6.591-6.574A6.56 6.56 0 0 1 14.37 7.923c0 3.626-2.951 6.574-6.59 6.574zm-1.896-1.042c-.114-.075-.24-.131-.371-.176-.131-.045-.27-.067-.41-.067-.14 0-.279.022-.41.067s-.257.101-.371.176c-.228.147-.492.219-.79.219-.298 0-.562-.072-.79-.219-.228-.147-.393-.341-.497-.577-.104-.236-.156-.499-.156-.789 0-.29.052-.553.156-.789.104-.236.269-.43.497-.577.228-.147.492-.219.79-.219.298 0 .562.072.79.219.228.147.393.341.497.577.104.236.156.499.156.789 0 .29-.052.553-.156.789-.104.236-.269.43-.497.577z"/>
+    </svg>
+    <span class="whatsapp-text-visible">Fale com o Suporte</span>
+</a>
 </body>
 </html>
