--- a/index.html
+++ b/index.html
@@ -546,6 +546,22 @@
                 </div>
             </div>
             <div class="event-container">
+                <a href="meu-evento-agd.html" class="event-banner">
+                    <img src="img/EMACUPARENA.png" alt="Banner do EMA CUP JANDUIS">
+                </a>
+                <div class="event-info">
+                    <h2>EMA CUP DE JIU-JITSU</h2>
+                    <div class="event-detail">
+                        <span class="icon">🗓️</span> 
+                        <span><b>20/11/2025</b></span>
+                    </div>
+                    <div class="event-detail">
+                        <span class="icon">📍</span> 
+                        <span><b>Janduís/RN</b></span>
+                    </div>
+                    <p>Inscrições em breve</p>
+                </div>
+            <div class="event-container">
                 <a href="eventos/bbc/menu-evento.html" class="event-banner">
                     <img src="img/BBCOPENAC.jpeg" alt="Banner do BBC Open de Jiu-Jitsu">
                 </a>
